[package]
name = "obj2mc-app"
version = "0.1.0"
description = "OBJ to Minecraft/Blockbench Converter"
authors = ["you"]
edition = "2021"

[lib]
name = "obj2mc_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tobj = "4"
rayon = "1.10"
glam = "0.29"
ahash = "0.8"

